<resources>
    <string name="app_name">StrataGrids</string>
    <string name="action_settings">Settings</string>
    <string name="logged_in_label">Logged In Overview</string>
    <string name="profile_settings_label">Profile Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="or_continue_without_logging_in_to_play_locally">Or continue without logging in to play locally</string>
    <string name="play_offline">Play Offline</string>


    <!-- Error messages for all Firebase Auth error codes. -->
    <string name="ERROR_INVALID_CUSTOM_TOKEN">The custom token format is incorrect. Please check the documentation.</string>
    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">The custom token corresponds to a different audience.</string>
    <string name="ERROR_INVALID_CREDENTIAL">Invalid email or password.</string>
    <string name="ERROR_INVALID_EMAIL">The email address is invalid.</string>
    <string name="ERROR_WRONG_PASSWORD">The password is invalid.</string>
    <string name="ERROR_USER_MISMATCH">The supplied credentials do not correspond to the previously signed-in user.</string>
    <string name="ERROR_REQUIRES_RECENT_LOGIN">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">An account already exists with the same email address.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">This credential is already associated with a different user account.</string>
    <string name="ERROR_USER_DISABLED">The user account has been disabled by an administrator.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="ERROR_USER_NOT_FOUND">No users were found matching these credentials.</string>
    <string name="ERROR_INVALID_USER_TOKEN">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">This operation is not allowed. You must enable this service in the console.</string>
    <string name="ERROR_WEAK_PASSWORD">The given password is invalid. It must be at least 6 characters.</string>
    <string name="the_stratagrids_logo">The StrataGrids logo</string>
    <string name="stratagrids">Stratagrids</string>
    <string name="play_connect_conquer">Play. Connect. Conquer.</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account_to_play_online">Create an account to play online</string>
    <string name="email_address">Email Address</string>
    <string name="name_email_com">name@email.com</string>
    <string name="password">Password</string>
    <string name="create_a_password">Create a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_ve_read_and_agree_with_the_terms_and_conditions_and_the_privacy_policy">I have read and agree with the Terms and Conditions and the Privacy Policy.</string>


    <!-- Overview Activity strings-->
    <string name="RulesButtonText">Rules</string>
    <string name="UsernameText">Username</string>
    <string name="ProfileButtonText">Profile</string>
    <string name="MatchmakingTitle">Starting a new match</string>
    <string name="MatchmakingDescription">Feel like taking on another challenge?</string>
    <string name="MatchmakingButtonText">Matchmaking</string>
    <string name="LocalGameButtonText">Local Game</string>
    <string name="MatchcodeButtonText">Matchcode</string>
    <string name="OngoingMatchestTitle">Ongoing matches</string>
    <string name="YourTurnDescription">Your turn! Let them know what you\'re worth.</string>
    <string name="OpponentsTurnDescription">Opponents\' turn! Take a break and come back later.</string>

    <!-- Profile Settings Activity strings-->
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="account_text">Account</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="diagnosticsText">Diagnostics</string>
    <string name="ManagmentDescriptionText">You are in control of your account</string>
    <string name="ManagementTitleText">Management</string>
    <string name="ProfilePictureDescription">Profile picture of the user</string>
    <string name="NumberOfMatchesLostText">Number of matches lost:</string>
    <string name="NumberOfTiesText">Number of matches tied:</string>
    <string name="StatisticsTitleText">Statistics</string>
    <string name="NumberOfWinsText">Number of matches won:</string>
    <string name="LogoutButtonText">Logout</string>
    <string name="LoginButtonText">Login</string>
    <string name="DeleteAccountButtonText">Delete Account</string>
    <string name="ProfileSettingsBackButtonText">Return to the overview activity</string>
    <string name="DiagnosticsCheckBoxText">Help us improve the game by opting-in for sending us diagnostics information</string>
    <string name="OngoingMatches">Ongoing matches</string>
    <string name="LoggedOutDescriptionText">It seems you are logged out, that\'s a bummer! This is where you\'ll find your ongoing matches.</string>
    <string name="NoConnectionImageDescription">Logged out cloud image</string>
    <string name="FeaturesDisabledDescription">Login to an existing account, or create a new one to access:</string>
    <string name="OnlineMatchmakingText">•Online matchmaking</string>
    <string name="OnlineMatchesWithFriendsText">•Online matches with friends</string>
    <string name="offlineText">Offline</string>
    <string name="example_email_com">example@email.com</string>
    <string name="generic_error">An error has occurred.</string>
</resources>