<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/ProfileSettingsBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/ProfileSettingsBackButtonText"
        android:drawableLeft="@drawable/arrow_back_ios_24px"
        android:theme="@style/ButtonIcon"
        app:layout_constraintBottom_toTopOf="@+id/ProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:gravity="center_horizontal"
        android:text="@string/account_text"
        android:theme="@style/BoldText"
        app:layout_constraintBottom_toTopOf="@+id/ProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ProfileSettingsBackButton"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ProfilePicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="611dp"
        android:contentDescription="@string/ProfilePictureDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccount"
        app:srcCompat="@drawable/account_circle_24px" />

    <TextView
        android:id="@+id/UsernameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/UsernameText"
        android:theme="@style/BoldText"
        app:layout_constraintBottom_toTopOf="@+id/StatisticsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePicture" />


    <TextView
        android:id="@+id/StatisticsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/StatisticsTitleText"
        android:theme="@style/BoldText"
        app:layout_constraintBottom_toTopOf="@+id/StatisticsWins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

    <TextView
        android:id="@+id/StatisticsWins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/NumberOfWinsText"
        app:layout_constraintBottom_toTopOf="@+id/StatisticsLoss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticsTitle" />

    <TextView
        android:id="@+id/StatisticsLoss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/NumberOfMatchesLostText"
        app:layout_constraintBottom_toTopOf="@+id/StatisticsTies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticsWins" />

    <TextView
        android:id="@+id/StatisticsTies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/NumberOfTiesText"
        app:layout_constraintBottom_toTopOf="@+id/ManagementTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticsLoss" />


    <TextView
        android:id="@+id/ManagementTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ManagementTitleText"
        android:theme="@style/BoldText"
        app:layout_constraintBottom_toTopOf="@+id/ManagementDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticsTies" />

    <TextView
        android:id="@+id/ManagementDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ManagmentDescriptionText"
        app:layout_constraintBottom_toTopOf="@+id/DiagnosticsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManagementTitle" />

    <TextView
        android:id="@+id/DiagnosticsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/diagnosticsText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManagementDescription" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/DiagnosticsCheckBoxText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DiagnosticsTitle" />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LogoutButtonText"
        android:theme="@style/ButtonBlue"
        app:layout_constraintBottom_toTopOf="@+id/DeleteAccountButton"
        app:layout_constraintEnd_toEndOf="@+id/DeleteAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/DeleteAccountButton"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:text="@string/DeleteAccountButtonText"
        android:theme="@style/ButtonDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoutButton" />


</androidx.constraintlayout.widget.ConstraintLayout>