<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/OngoingMatchesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OngoingMatches"
            android:theme="@style/BoldText"/>

        <TextView
            android:id="@+id/LoggedOutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoggedOutDescriptionText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:id="@+id/LoggedOutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/CloudOffImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/NoConnectionImageDescription"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/cloud_off_24px" />

            <TextView
                android:id="@+id/FeaturesDisabledTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/FeaturesDisabledDescription" />

            <TextView
                android:id="@+id/OnlineMatchmakingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/OnlineMatchmakingText" />

            <TextView
                android:id="@+id/OnlineMatchesWithFriendsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/OnlineMatchesWithFriendsText" />
        </LinearLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginButtonText"
            android:theme="@style/ButtonBlue"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>