<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".ui.login.SignUpActivity">

    <LinearLayout
        android:id="@+id/titleSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="75dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account_to_play_online"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/transparent"
            android:scaleType="fitXY"
            android:drawableRight="@drawable/close"
            android:scaleX="2"
            android:scaleY="2"


            app:srcCompat="@drawable/x"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UserNameSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/UserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/EnterUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_round"
            android:padding="10dip"
            android:layout_marginTop="5dp"

            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/EmailSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/EmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/EnterEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/example_email_com"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_round"
            android:padding="10dip"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PasswordSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/PasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/CreatePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:autofillHints="password"
            android:textSize="18sp"
            android:background="@drawable/edittext_round"
            android:padding="10dip"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:autofillHints="password"
            android:textSize="18sp"
            android:background="@drawable/edittext_round"
            android:padding="10dip"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TermAndConditionSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:text="@string/i_ve_read_and_agree_with_the_terms_and_conditions_and_the_privacy_policy"
            android:textSize="14sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:focusable="true"
        android:layout_marginTop="15dp"/>

</LinearLayout>
