<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageStrataLogo"
        android:layout_width="228dp"
        android:layout_height="220dp"
        android:contentDescription="@string/the_stratagrids_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        app:srcCompat="@drawable/stratagridslogo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textStrataGridsTitle"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:text="@string/stratagrids"
        android:textSize="36.0sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageStrataLogo"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textStrataGridsSlogan"
        android:layout_width="284dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/play_connect_conquer"
        android:textSize="20.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStrataGridsTitle"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>